# arthasutra

./: .env.example  .gitignore  README.md  arthasutra.md  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  config-schema.md  domain-model.md  overview.md  roadmap.md  security-observability.md  setup.md  testing.md
docs/engines/: backtest-engine.md  decision-engine.md  overlay-engine.md
docs/frontend/: ui-blueprint.md
docs/integrations/: zerodha-kite.md
docs/phases/: phase-01-data-csv-dashboard.md  phase-02-analytics-actions.md  phase-03-overlay-alerts.md  phase-04-backtest-parity.md  phase-05-live-data.md  phase-06-rebalance-tax.md  phase-07-broker-exec.md  phase-08-hardening.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ActionInbox.tsx  ColumnMapperDialog.tsx  PositionTable.tsx
src/arthasutra/: __init__.py  cli.py  version.py
src/arthasutra/api/: main.py
src/arthasutra/api/routers/: data.py  portfolios.py
src/arthasutra/db/: models.py  session.py
src/arthasutra/services/: analytics.py  csv_importer.py  decision_engine.py  kite_client.py  live.py
src/arthasutra/services/marketdata/: yfinance_client.py
tests/: conftest.py  test_health.py  test_import_dashboard.py  test_portfolio_list_delete.py  test_positions_and_actions.py
