[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arthasutra"
version = "0.1.0"
description = "ArthaSutra backend (FastAPI, SQLModel)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ArthaSutra" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic>=2.1.0",
  "sqlalchemy>=2.0.0",
  "sqlmodel>=0.0.16",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.0",
  "httpx>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
arthasutra-api = "arthasutra.cli:serve"
